changed db and ai links